syntax = "proto3";

option csharp_namespace = "Server_Service";

service GrpcCustomer {
  rpc GetByName (SearchRequest) returns (SearchReply);
}

message SearchRequest {
	string name = 1;
}

message SearchReply {
	repeated GrpcCustomerModel cusotmers = 1;
}

message GrpcCustomerModel {
	int32 Id = 1;
	int32 ExternalId = 2;
	string name = 3;
	string surname = 4;
	string email = 5;  
	string city = 6;
	string country = 7;
}